Fixed alignment and shadows

--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
 }
 
 .subscription-container h2 {
@@ -268,6 +269,7 @@ main {
   height: 522px;
   background-color: #f0f0f0;
   border-radius: 8px;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
 }
 
 .form-container {
